--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^8.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
